c4prj2_input/grade.txt
Grading at Wed Jul 31 15:13:25 UTC 2019
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
input.c: In function ‘hand_from_string’:
input.c:40:10: error: unused variable ‘index’ [-Werror=unused-variable]
   size_t index = 0;
          ^
input.c:39:10: error: unused variable ‘icard’ [-Werror=unused-variable]
   size_t icard = 0;
          ^
input.c:38:14: error: unused variable ‘delim’ [-Werror=unused-variable]
   const char delim[2] = " ";
              ^
cc1: all warnings being treated as errors
Compilation of input.c failed

Overall Grade: F
